--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 bin/
+obj/
 
 # Created by https://www.toptal.com/developers/gitignore/api/c,direnv,git,linux
 # Edit at https://www.toptal.com/developers/gitignore?templates=c,direnv,git,linux
